tests/snapshots/integration__integration_tests__post_start_commands__post_start_multiline_with_newlines.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_COUNT: "1"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_KEY_0: advice.mergeConflict
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_CONFIG_VALUE_0: "false"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfeature[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].feature[0m[0m
💡 [2mTo enable automatic cd, run: wt config shell install[0m
🔄 [36mRunning post-start:[0m
[40m [0m  [1m[34mecho[0m [32m'first line'[0m [36m>[0m multiline.txt[0m
[40m [0m  [1m[34mecho[0m [32m'second line'[0m [36m>>[0m multiline.txt[0m
[40m [0m  [1m[34mecho[0m [32m'third line'[0m [36m>>[0m multiline.txt[0m

----- stderr -----
